// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type DateTime renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      disabled={true}
      placeholder=" "
      type="datetime-local"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      disabled={true}
      placeholder=" "
      type="datetime-local"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kBGJNX"
      placeholder="Placeholder"
      type="datetime-local"
    />
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX igbTSY"
      placeholder="Placeholder"
      type="datetime-local"
    />
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX fhOWWW"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder=" "
      readOnly={true}
      type="datetime-local"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder=" "
      readOnly={true}
      type="datetime-local"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="Placeholder"
      type="datetime-local"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="Placeholder"
      type="datetime-local"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="Placeholder"
      type="datetime-local"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="Placeholder"
      type="datetime-local"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX jFkoir"
      dir="rtl"
      placeholder="Placeholder"
      type="datetime-local"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-eZkcaX ssfmU"
      dir="rtl"
      placeholder="Placeholder"
      type="datetime-local"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX jjIEOS"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <label
        className="sc-eqKtKx uXXXN"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="medium"
      type="datetime-local"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="large"
      type="datetime-local"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX iAgEXF"
        placeholder="xlarge"
        type="datetime-local"
      />
      <label
        className="sc-eqKtKx aGCUy"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX jwaXyu"
      placeholder="Placeholder"
      type="datetime-local"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX hpzrQJ"
      placeholder="Placeholder"
      type="datetime-local"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM eLTOhr"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
